--- a/openai.cabal
+++ b/openai.cabal
@@ -14,10 +14,15 @@ license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Gabriella Gonzalez
 maintainer:         GenuineGabriella@gmail.com
+category:           AI, API, Web
 copyright:          2024 Gabriella Gonzalez
 build-type:         Simple
-extra-source-files: CHANGELOG.md
-                    README.md
+extra-doc-files:    CHANGELOG.md
+extra-source-files: README.md
+
+source-repository head
+  type:             git
+  location:         https://github.com/MercuryTechnologies/openai
 
 library
     default-language:   Haskell2010
