--- a/openai.cabal
+++ b/openai.cabal
@@ -120,3 +120,15 @@ executable openai-example
                     , openai
                     , text
     ghc-options:      -Wall
+
+executable weather-chatbot-example
+    default-language: Haskell2010
+    hs-source-dirs:   examples
+    main-is:          Main.hs
+    build-depends:    base
+                    , aeson
+                    , bytestring
+                    , openai
+                    , text
+                    , vector
+    ghc-options:      -Wall
