--- a/openai.cabal
+++ b/openai.cabal
@@ -114,7 +114,7 @@ test-suite tasty
 
 executable openai-example
     default-language: Haskell2010
-    hs-source-dirs:   openai-example
+    hs-source-dirs:   examples/openai-example
     main-is:          Main.hs
     build-depends:    base
                     , openai
@@ -123,7 +123,7 @@ executable openai-example
 
 executable weather-chatbot-example
     default-language: Haskell2010
-    hs-source-dirs:   examples
+    hs-source-dirs:   examples/weather-chatbot-example
     main-is:          Main.hs
     build-depends:    base
                     , aeson
