--- a/openai.cabal
+++ b/openai.cabal
@@ -35,6 +35,7 @@ library
                       , http-api-data
                       , http-client
                       , http-client-tls
+                      , http-types
                       , servant
                       , servant-multipart-api
                       , servant-client
