--- a/openai.cabal
+++ b/openai.cabal
@@ -129,6 +129,16 @@ executable openai-example
                     , text
     ghc-options:      -Wall
 
+executable chat-completions-stream-example
+    default-language: Haskell2010
+    hs-source-dirs:   examples/chat-completions-stream-example
+    main-is:          Main.hs
+    build-depends:    base
+                    , aeson
+                    , openai
+                    , text
+    ghc-options:      -Wall
+
 executable weather-chatbot-example
     default-language: Haskell2010
     hs-source-dirs:   examples/weather-chatbot-example
